--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@ body{
   border-radius: 12px;
   align-items: center;
   justify-content: space-around;
-  box-shadow: 5px 5px 15px rgba(0, 0 , 0, .7);
-
+/*   box-shadow: 5px 5px 15px rgba(0, 0 , 0, .7);
+ */
   /* box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.726); */
 }
 
@@ -39,7 +39,7 @@ body{
   display: flex;
   flex-direction: column;
   border-radius: 12px;
-  box-shadow: 5px 5px 15px rgba(0, 0 , 0, .7);
+/*   box-shadow: 5px 5px 15px rgba(0, 0 , 0, .7); */
 }
 
 
